Fix wrapping issue in timeline

--- a/src/styles.css
+++ b/src/styles.css
@@ -248,6 +248,7 @@ a.navbar-brand > img {
 
 .game-timeline-content {
     min-width: 650px;
+    white-space: nowrap;
 }
 
 .game.view .panel-body {
